<resources>
    <string name="app_name">HelloWorld</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnMainName">SALUDO!!!</string>
    <string name="title_activity_destino">DestinoActivity</string>
    <string name="destino">ACTIVIDAD DE DESTINO</string>
    <string name="title_activity_resultado">ResultadoActivity</string>
    <string name="title_activity_receiver">ReceiverActivity</string>
    <string name="enviarDatos">Enviar Datos</string>
    <string name="NewTarget">Nuevo destino / Lista</string>
    <string name="result">Resultado</string>
    <string name="recibiendoDatos">Recibiendo datos...</string>
    <string name="title_activity_implicit">ImplicitActivity</string>
    <string name="mensajeImplicita">Soy una actividad implicita</string>
    <string name="title_activity_implicita2">Implicita2Activity</string>
    <string name="mensajeImplicita2">Soy una actividad implicita 2</string>
    <string name="llamar">Llamar</string>
    <string name="action_borrar">Borrar</string>
    <string name="action_crear">Crear</string>
    <string name="update_preference">ACTUALIZAR</string>
    <string name="summary_preference">Esto el summary de la preferencia</string>
    <string name="name_pref">Nombre pref</string>
    <string name="preferences_color">Color preferido</string>
    <string name="preferences_title">Escoger color</string>

    <array name="color_values">
        <item>FF0000</item>
        <item>00FF00</item>
        <item>0000FF</item>
    </array>
    <array name="color_entries">
        <item>Rojo</item>
        <item>Verde</item>
        <item>Azul</item>
    </array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_preferencias">PreferenciasActivity</string>
    <string name="preferencias">Preferencias</string>
    <string name="copyfile">COPIAR FICHERO</string>
    <string name="copyfiletosd">Copiar Fichero a SD</string>
    <string name="copiardesdexmladb">COPIAR DESDE XML A DB</string>
    <string name="selectdb">SELECT FROM DB</string>
    <string name="descargar_imagen">DESCARGAR IMAGEN</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_fragmento1">Fragmento1Activity</string>
    <string name="title_activity_fragmento2">Fragmento2Activity</string>
    <string name="fragment1">FRAGMENTO 1</string>
</resources>
